--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ import org.apache.tools.ant.taskdefs.condition.Os
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "26"
 
     defaultConfig {
         applicationId "net.named_data.nfd"
@@ -45,6 +45,7 @@ android {
     splits {
         abi {
             enable true // enable ABI split feature to create one APK per ABI
+            //include 'armeabi','armeabi-v7a','arm64-v8a' // I ADDED THIS
             universalApk false // don't generate an additional APK that targets all the ABIs
         }
     }
@@ -53,7 +54,7 @@ android {
     // versionCode digit for each supported ABI, with 64bit>32bit and x86>armeabi-*
     project.ext.versionCodes = ['armeabi': 1,
                                 'armeabi-v7a': 2,
-                                'arm64-v8a': 3,
+                                'arm64-v8a': 3, // I DID THIS.. and undid it as well
                                 'mips': 5,
                                 'mips64': 6,
                                 'x86': 8,
@@ -142,18 +143,18 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-
     compile('com.intel.jndn.management:jndn-management:1.1.0') {
-      exclude group: 'net.named-data', module: 'jndn'
+        exclude group: 'net.named-data', module: 'jndn'
     }
     compile('net.named-data:jndn-android:0.14') {
-      exclude group: 'org.xerial'
+        exclude group: 'org.xerial'
     }
     compile 'net.named-data.jndn-xx:jndn-xx-util:0.0.1'
     compile 'joda-time:joda-time:2.7'
+    compile files('libs/android-ibrdtn-api.jar')
 }
 
 Properties properties = new Properties()
